--- a/index.html
+++ b/index.html
@@ -10360,7 +10360,7 @@
                                                     data-styles-preset="C7P0rBqwG"
                                                     style="--framer-text-alignment: left; --framer-text-color: var(--extracted-r6o4lv, var(--token-e02c5fab-1558-4a4e-b17e-e153373c8154, rgb(67, 67, 71)));"
                                                 >
-                                                    © Copyright Vvvvvvv 2023 The Nigeria-Mozambique Chammber of Commerce - Camozini
+                                                    © Copyright 2023 The Nigeria-Mozambique Chammber of Commerce - Camozini
                                                 </p>
                                             </div>
                                         </div>
@@ -10872,7 +10872,7 @@
                                                     data-styles-preset="C7P0rBqwG"
                                                     style="--framer-text-alignment: right; --framer-text-color: var(--extracted-r6o4lv, var(--token-e02c5fab-1558-4a4e-b17e-e153373c8154, rgb(67, 67, 71)));"
                                                 >
-                                                    © Copyright VVVVVV 2023 The Nigeria-Mozambique Chammber of Commerce - Camozini
+                                                    © Copyright 2023 The Nigeria-Mozambique Chammber of Commerce - Camozini
                                                 </p>
                                             </div>
                                         </div>
